--- a/src/html/header.html
+++ b/src/html/header.html
@@ -3,7 +3,7 @@
     <div class="header__zero">
       @@include('elements/data-box.html',{"class": "header__data-box"})
     </div>
-    <div class="header__logo"><a href="#"> Logo</a></div>
+    <div class="header__logo"><a href="index.html"> Logo</a></div>
     <div class="header__menu menu">
       <nav class="menu__body">
         <div class="menu__burger">
