--- a/src/index.html
+++ b/src/index.html
@@ -158,7 +158,7 @@
                     <div class="third-section__area">80 sq.m</div>
                   </div>
                   <div class="third-section__name">
-                    <h3>Eyewear store interior</h3>
+                    <h3><a href="#">Eyewear store interior</a></h3>
                     @@include('html/elements/discover-more.html',{"class":
                     "third-section__discover-more", "text": "Discover more",
                     "href": "#"})
@@ -176,7 +176,7 @@
                     <div class="third-section__area">80 sq.m</div>
                   </div>
                   <div class="third-section__name">
-                    <h3>Minimalist style home</h3>
+                    <h3><a href="#">Minimalist style home</a></h3>
                     @@include('html/elements/discover-more.html',{"class":
                     "third-section__discover-more", "text": "Discover more",
                     "href": "#"})
@@ -194,7 +194,7 @@
                     <div class="third-section__area">80 sq.m</div>
                   </div>
                   <div class="third-section__name">
-                    <h3>Residence by the lighthouse</h3>
+                    <h3><a href="#">Residence by the lighthouse</a></h3>
                     @@include('html/elements/discover-more.html',{"class":
                     "third-section__discover-more", "text": "Discover more",
                     "href": "#"})
@@ -212,7 +212,7 @@
                     <div class="third-section__area">80 sq.m</div>
                   </div>
                   <div class="third-section__name">
-                    <h3>Eyewear storeinterior</h3>
+                    <h3><a href="#">Eyewear storeinterior</a></h3>
                     @@include('html/elements/discover-more.html',{"class":
                     "third-section__discover-more", "text": "Discover more",
                     "href": "#"})
@@ -230,7 +230,7 @@
                     <div class="third-section__area">80 sq.m</div>
                   </div>
                   <div class="third-section__name">
-                    <h3>House on a Hillside</h3>
+                    <h3><a href="#">House on a Hillside</a></h3>
                     @@include('html/elements/discover-more.html',{"class":
                     "third-section__discover-more", "text": "Discover more",
                     "href": "#"})
