--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
                     <h3><a href="#">Eyewear store interior</a></h3>
                     @@include('html/elements/discover-more.html',{"class":
                     "third-section__discover-more", "text": "Discover more",
-                    "href": "#"})
+                    "href": "new.html"})
                   </div>
                 </div>
               </div>
