--- a/src/news.html
+++ b/src/news.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  @@include('html/head.html',{ "title":"Projects" })
+  @@include('html/head.html',{ "title":"News" })
 
   <body>
     @@include('html/elements/preloader.html',{})
     <div class="wrapper">
       @@include('html/header.html',{})
-      <main>
+      <main class="page-news">
         <div class="page-news__first-news-section first-news-section">
           <div class="first-news-section__title-box">
             <h2 class="first-news-section__title">Our latest news</h2>
@@ -87,13 +87,13 @@
           class="page-news__pages-navigation-section pages-navigation-section"
         >
           <div class="pages-navigation-section__conteiner">
-            <a class="icon-arrow-right" href="new.htm"></a>
-            <a href="new.htm">1</a>
-            <a href="new.htm">2</a>
-            <a href="new.htm">3</a>
+            <a class="icon-arrow-right" href="news.html"></a>
+            <a href="news.html">1</a>
+            <a href="news.html">2</a>
+            <a href="news.html">3</a>
             <div class="ages-navigation-section__points">...</div>
-            <a href="new.htm">15</a>
-            <a class="icon-arrow-right" href="new.htm"></a>
+            <a href="news.html">15</a>
+            <a class="icon-arrow-right" href="news.html"></a>
           </div>
         </div>
         <div class="page-news__last-news-section last-news-section">
