--- a/src/news.html
+++ b/src/news.html
@@ -11,15 +11,18 @@
           <div class="first-news-section__title-box">
             <h2 class="first-news-section__title">Our latest news</h2>
             <div class="first-news-section__tabs tabs">
+              <div class="first-news-section__opening-box">
+                <div class="first-news-section__elect-tab">All</div>
+                <div
+                  class="first-news-section__opening-icon icon-down-arrowhead"
+                ></div>
+              </div>
               <ul class="tabs__list">
                 <li class="tabs__tab active-tab" id="all">All</li>
                 <li class="tabs__tab" id="blog">Blog</li>
                 <li class="tabs__tab" id="news-preview">News</li>
                 <li class="tabs__tab" id="advice">Advice from the designer</li>
               </ul>
-              <div
-                class="first-news-section__opening icon-down-arrowhead"
-              ></div>
             </div>
           </div>
         </div>
@@ -30,7 +33,7 @@
                 @@include('html/elements/discover-more.html',{"class":
                 "second-news-section__discover-more", "text": "Discover more",
                 "href": "one-news.html"})
-                <div class="second-news-section__subtitle">
+                <div class="second-news-section__subtitle p1">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
                   vel gravida urna. Donec blandit sapien eu diam ullamcorper
                   euismod. Nam tempus pellentesque ligula ut aliquam.
@@ -68,7 +71,7 @@
                 @@include('html/elements/discover-more.html',{"class":
                 "second-news-section__discover-more", "text": "Discover more",
                 "href": "one-news.html"})
-                <div class="second-news-section__subtitle">
+                <div class="second-news-section__subtitle p1">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
                   vel gravida urna. Donec blandit sapien eu diam ullamcorper
                   euismod. Nam tempus pellentesque ligula ut aliquam.
