end page "news"

--- a/src/news.html
+++ b/src/news.html
@@ -11,11 +11,9 @@
           <div class="first-news-section__title-box">
             <h2 class="first-news-section__title">Our latest news</h2>
             <div class="first-news-section__tabs tabs">
-              <div class="first-news-section__opening-box">
-                <div class="first-news-section__elect-tab">All</div>
-                <div
-                  class="first-news-section__opening-icon icon-down-arrowhead"
-                ></div>
+              <div class="tabs__opening-box">
+                <div class="tabs__select-tab">All</div>
+                <div class="tabs__opening-icon icon-down-arrowhead"></div>
               </div>
               <ul class="tabs__list">
                 <li class="tabs__tab active-tab" id="all">All</li>
