--- a/src/html/elements/example-box.html
+++ b/src/html/elements/example-box.html
@@ -18,34 +18,34 @@
     </div>
   </div>
   <div class="example-box__example-project">
-    <a href="#">
+    <a href="one-projects.html">
       <img src="@img/third-section/21.png" alt="" />
     </a>
-    <a href="#">
+    <a href="one-projects.html">
       <img src="@img/third-section/2.png" alt="" />
     </a>
-    <a href="#">
+    <a href="one-projects.html">
       <img src="@img/third-section/3.png" alt="" />
     </a>
-    <a href="#">
+    <a href="one-projects.html">
       <img src="@img/third-section/4.png" alt="" />
     </a>
-    <a href="#">
+    <a href="one-projects.html">
       <img src="@img/third-section/25.png" alt="" />
     </a>
-    <a href="#">
+    <a href="one-projects.html">
       <img src="@img/third-section/21.png" alt="" />
     </a>
-    <a href="#">
+    <a href="one-projects.html">
       <img src="@img/third-section/2.png" alt="" />
     </a>
-    <a href="#">
+    <a href="one-projects.html">
       <img src="@img/third-section/3.png" alt="" />
     </a>
-    <a href="#">
+    <a href="one-projects.html">
       <img src="@img/third-section/4.png" alt="" />
     </a>
-    <a href="#">
+    <a href="one-projects.html">
       <img src="@img/third-section/25.png" alt="" />
     </a>
   </div>
