--- a/src/index.html
+++ b/src/index.html
@@ -58,13 +58,15 @@
             <!-- Discaver more -->
             @@include('html/elements/discover-more.html',{"class":
             "first-section__discover-more", "text": "Discover more", "href":
-            "#"})
+            "one-projects.html"})
             <!-- data-box -->
             @@include('html/elements/data-box.html',{"class":
             "first-section__data-box"})
             <div class="first-section__column">
               <div class="first-section__next">
-                <a class="first-section__next-link" href="#">Next Project</a>
+                <a class="first-section__next-link" href="one-projects.html"
+                  >Next Project</a
+                >
               </div>
               <div class="first-section__vertical-slogan">
                 Perfect proportions
@@ -93,7 +95,7 @@
             </p>
             @@include('html/elements/discover-more.html',{"class":
             "second-section__discover-more", "text": "Discover more", "href":
-            "#"})
+            "about.html"})
           </div>
           <div class="second-section__img-box1">
             <img
@@ -158,10 +160,12 @@
                     <div class="third-section__area">80 sq.m</div>
                   </div>
                   <div class="third-section__name">
-                    <h3><a href="#">Eyewear store interior</a></h3>
+                    <h3>
+                      <a href="one-projects.html">Eyewear store interior</a>
+                    </h3>
                     @@include('html/elements/discover-more.html',{"class":
                     "third-section__discover-more", "text": "Discover more",
-                    "href": "new.html"})
+                    "href": "one-projects.html"})
                   </div>
                 </div>
               </div>
@@ -176,10 +180,12 @@
                     <div class="third-section__area">80 sq.m</div>
                   </div>
                   <div class="third-section__name">
-                    <h3><a href="#">Minimalist style home</a></h3>
+                    <h3>
+                      <a href="one-projects.html">Minimalist style home</a>
+                    </h3>
                     @@include('html/elements/discover-more.html',{"class":
                     "third-section__discover-more", "text": "Discover more",
-                    "href": "#"})
+                    "href": "one-projects.html"})
                   </div>
                 </div>
               </div>
@@ -194,10 +200,14 @@
                     <div class="third-section__area">80 sq.m</div>
                   </div>
                   <div class="third-section__name">
-                    <h3><a href="#">Residence by the lighthouse</a></h3>
+                    <h3>
+                      <a href="one-projects.html"
+                        >Residence by the lighthouse</a
+                      >
+                    </h3>
                     @@include('html/elements/discover-more.html',{"class":
                     "third-section__discover-more", "text": "Discover more",
-                    "href": "#"})
+                    "href": "one-projects.html"})
                   </div>
                 </div>
               </div>
@@ -212,10 +222,12 @@
                     <div class="third-section__area">80 sq.m</div>
                   </div>
                   <div class="third-section__name">
-                    <h3><a href="#">Eyewear storeinterior</a></h3>
+                    <h3>
+                      <a href="one-projects.html">Eyewear storeinterior</a>
+                    </h3>
                     @@include('html/elements/discover-more.html',{"class":
                     "third-section__discover-more", "text": "Discover more",
-                    "href": "#"})
+                    "href": "one-projects.html"})
                   </div>
                 </div>
               </div>
@@ -230,14 +242,14 @@
                     <div class="third-section__area">80 sq.m</div>
                   </div>
                   <div class="third-section__name">
-                    <h3><a href="#">House on a Hillside</a></h3>
+                    <h3><a href="one-projects.html">House on a Hillside</a></h3>
                     @@include('html/elements/discover-more.html',{"class":
                     "third-section__discover-more", "text": "Discover more",
-                    "href": "#"})
+                    "href": "one-projects.html"})
                   </div>
                 </div>
               </div>
-              <a href="#" class="third-section__image-box-last">
+              <a href="projects.html" class="third-section__image-box-last">
                 <h3>See more 60 projects</h3>
                 <div class="third-section__image">
                   <img src="@img/third-section/last.png" alt="" />
