--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer @@class">
   <div class="footer__conteiner">
     <div class="footer__copyright">© Copyright 2018. All rights reserved</div>
     <div class="footer__slogan">
