--- a/src/one-news.html
+++ b/src/one-news.html
@@ -6,8 +6,12 @@
     @@include('html/elements/preloader.html',{})
     <div class="wrapper">
       @@include('html/header.html',{})
-      <main class="page-new"></main>
-      @@include('html/footer.html',{})
+      <main class="page-one-news">
+        <div class="page-one-news__first-on-section first-on-section">
+          .first-on-section__
+        </div>
+      </main>
+      @@include('html/footer.html',{"class":"footer-black"})
     </div>
     @@include('html/elements/pop-up.html',{})
     @@include('html/elements/pop-up2.html',{})
